# dod_thesis

./: .gitignore  .hgignore  Asset.cpp  Asset.hpp  CMakeLists.txt  CREATE_DEBUG_PROJECT.sh  CompManagers.cpp  CompManagers.hpp  CompManagersOOP.cpp  CompManagersOOP.hpp  Debug.cpp  Debug.hpp  DestroyTest.hpp  EngineCommon.cpp  EngineCommon.hpp  EntityManager.cpp  EntityManager.hpp  EntityOOP.cpp  EntityOOP.hpp  Main.cpp  MainOOP.cpp  Math.hpp  MathOOP.cpp  MathOOP.hpp  README.md  TODO.txt  TestScene.hpp  TestSceneOOP.hpp  TransformTest.hpp
assets/: atlas.json
assets/shaders/: DebugCircle.glsl  DebugRect.glsl  DebugShape.frag  DebugShape.geom  DebugShape.glsl  DebugShape.vert  SpriteUnlit.frag  SpriteUnlit.glsl  SpriteUnlit.vert
cmake/: FindGLFW.cmake
